--- a/index.pug
+++ b/index.pug
@@ -2,13 +2,13 @@ doctype html
 html(lang="ja")
   head
     meta(charset="UTF-8")
-    meta(http-equiv="X-UA-Compatible", content="IE=edge")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    meta(name="description", content="Morning Fog")
-    link(rel="preconnect", href="https://fonts.googleapis.com")
-    link(rel="preconnect", href="https://fonts.gstatic.com", crossorigin)
-    link(href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&family=Inter:wght@400;500;600&family=Noto+Sans+JP:wght@400;500;700&display=swap", rel="stylesheet")
-    link(rel="stylesheet", href="style.css")
+    meta(http-equiv="X-UA-Compatible" content="IE=edge")
+    meta(name="viewport" content="width=device-width, initial-scale=1.0")
+    meta(name="description" content="Morning Fog")
+    link(rel="preconnect" href="https://fonts.googleapis.com")
+    link(rel="preconnect" href="https://fonts.gstatic.com", crossorigin)
+    link(href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&family=Inter:wght@400;500;600&family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet")
+    link(rel="stylesheet" href="style.css")
     title Micro CSS Framework / Morning Fog
   body
     .wrap
