--- a/scss/_baseAll.scss
+++ b/scss/_baseAll.scss
@@ -1,8 +1,7 @@
 * {
   box-sizing: border-box;
 
-  &:after,
-  &:before {
+  &:after, &:before {
     box-sizing: border-box;
   }
 }
@@ -16,12 +15,8 @@ html {
 $font-size: 14px !default;
 $line-height: 1.5 !default;
 $font-weight: 400 !default;
-$font-family: "Inter", "Helvetica Neue", "Helvetica", "Arial", "Noto Sans JP",
-  sans-serif !default;
-$background-color: var(--color-bg) !default;
-$color-text: var(--color-text) !default;
-
-body {
+$font-family: "Inter", "Helvetica Neue", "Helvetica", "Arial", "Noto Sans JP", sans-serif !default;
+$background-color: var(--color-bg) {
   // アンチエイリアス
   -webkit-font-smoothing: antialiased;
   // letter-spacing: 0.01em;
